--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.26.0",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "prettier": "^2.7.1",
     "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
     "react-dom": "18.0.0",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native": "0.69.6",
+    "react-native-paper": "^4.12.5",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
