--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.2",
+    "@expo-google-fonts/oswald": "^0.2.2",
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "eslint": "^8.26.0",
     "expo": "~46.0.16",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "prettier": "^2.7.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
