--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.4",
     "camelize": "^1.0.1",
     "eslint": "^8.26.0",
     "expo": "~46.0.16",
@@ -32,7 +33,9 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
