--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-maps": "0.31.1"
+    "react-native-maps": "0.31.1",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
