--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "styled-components": "^5.3.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "0.31.1",
-    "react-native-webview": "11.23.0"
+    "react-native-webview": "11.23.0",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
